# Profanity-censor

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  INSTALL.md  LICENSE  PROJECT-SUMMARY.md  QUICKSTART-censor.md  README-profanity-censor.md  README.md  REALTIME-TEST.py  censor-quickstart.sh  profanity_censor.py  profanity_list.txt  pyproject.toml  realtime_censor.py  requirements-censor.txt  save_state_demo.py  setup.sh
.github/workflows/: ci.yml
docs/: INSTALLATION.md  TROUBLESHOOTING.md
examples/: README.md  basic_demo.sh  batch_process.sh  run_demo.sh
social/: linkedin-post.md
